# rune

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  TODO.md  harness-spec.md
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci-rust.yml  docker-publish.yml  release-python-sdk.yml  release-rust-sdk.yml  release-rust.yml  release-ts-sdk.yml  release.yml
benches/: core_benchmarks.rs
benchmarks/: load_test.sh  report.py  run_all.sh
benchmarks/results/: baseline_report.md  optimized_report.md  report.md  v0.8_comparison.md
blog/v1.2.0/: index.html
demo/poc-v1/: Cargo.toml
demo/poc-v1/examples/python-caster/: caster.py  gen.sh  requirements.txt
demo/poc-v1/rune-core/src/: invoker.rs  session.rs
demo/poc-v2/examples/python-caster/: caster.py
demo/poc-v2/rune-core/src/: session.rs
demo/poc-v2/rune-gate/: Cargo.toml
demo/poc-v2/rune-gate/src/: gate.rs
demo/poc-v2/rune-server/: Cargo.toml
demo/poc-v2/rune-server/src/: main.rs
demo/poc-v3/examples/hello/: Cargo.toml
demo/poc-v3/rune-core/src/: rune.rs  session.rs
demo/poc-v3/rune-gate/: Cargo.toml
demo/poc-v3/rune-gate/src/: gate.rs
demo/poc-v3/rune-proto/: build.rs
demo/poc-v3/rune-proto/src/: lib.rs
demo/poc-v3/rune-server/: Cargo.toml
demo/poc-v3/rune-server/src/: main.rs
demo/poc-v4/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
demo/poc-v4/rune-core/: Cargo.toml
demo/poc-v4/rune-flow/: Cargo.toml
demo/poc-v4/rune-flow/src/: dsl.rs  (+1 more)
demo/poc-v4/rune-gate/: Cargo.toml
demo/poc-v4/rune-gate/src/: gate.rs
demo/poc-v4/rune-proto/: Cargo.toml
demo/poc-v4/rune-server/: Cargo.toml
demo/poc-v4/rune-server/src/: config.rs
docs/: api-reference.md  cli.md  configuration.md  dev-design.md  protocol-guarantees.md  sage-design.md
docs/dev/: linus-final-review.md  v1.2.0-release-notes.md
docs/dev/plans/: v1.2.0-modules-IJK.md
docs/dev/scope/: claude_v0.1.0.md  codex_v0.1.0.md  v1.2.0-scope.md  v1.3.0-scope.md
docs/rune-deep-dive/: index.html
docs/scope/: v0.1.0.md
docs/superpowers/plans/: 2026-03-20-rune-v0.1.0-phase0-migration.md  2026-03-22-rune-v0.2.0-infrastructure.md  2026-03-22-rune-v0.4.0-dag-engine.md  2026-03-22-rune-v0.5.0-sdk-cli.md  2026-03-25-rune-v1.1.0-production-hardening.md  2026-03-31-cli-redesign-m1.md
docs/superpowers/specs/: 2026-03-22-rune-v1.0.0-design.md  2026-03-31-cli-redesign.md
examples/: README.md
examples/agent-bridge/: README.md  bridge_caster.py  demo.html  requirements.txt
examples/dag-flow/: README.md  pipeline.json  run.sh
examples/file-upload/: README.md  sample.txt  upload.sh
examples/local-hello/: README.md  main.rs
examples/mixed-flow/: README.md
examples/python-caster/: README.md  main.py
examples/rust-caster/: Cargo.toml  main.rs
examples/ts-caster/: main.ts  package.json  tsconfig.json
packaging/homebrew/: README.md  rune.rb
runtime/rune-cli/: Cargo.toml
runtime/rune-cli/src/: client.rs  config.rs  daemon.rs  lib.rs  main.rs  output.rs
runtime/rune-cli/src/commands/: call.rs  casters.rs  config.rs  flow.rs  key.rs  list.rs  logs.rs  mod.rs  pilot.rs  rune.rs  runtime.rs  start.rs  status.rs  stop.rs  task.rs
runtime/rune-cli/src/runtime/: binary.rs  docker.rs  mod.rs  state.rs
runtime/rune-cli/tests/: cli_test.rs  client_test.rs  daemon_test.rs
runtime/rune-cli/tests/unit/: cli_parse_test.rs
runtime/rune-core/: Cargo.toml
runtime/rune-core/src/: app.rs  auth.rs  circuit_breaker.rs  config.rs  grpc_service.rs  invoker.rs  lib.rs  relay.rs  resolver.rs  retry.rs  rune.rs  scaling.rs  session.rs  telemetry.rs  time_utils.rs  trace.rs
runtime/rune-core/tests/: auth_test.rs  config_test.rs  cross_module_test.rs  session_integration_test.rs
runtime/rune-flow/: Cargo.toml
runtime/rune-flow/src/: dag.rs  engine.rs  engine_legacy.rs  lib.rs
runtime/rune-flow/tests/: dag_test.rs  engine_test.rs
runtime/rune-gate/: Cargo.toml
runtime/rune-gate/src/: error.rs  file_broker.rs  gate.rs  gate_tests.rs  lib.rs  middleware.rs  multipart.rs  rate_limit.rs  router.rs  shutdown.rs  state.rs  trace_headers.rs
runtime/rune-gate/src/handlers/: file.rs  flow.rs  mgmt.rs  mod.rs  openapi.rs  rune.rs  task.rs
runtime/rune-gate/tests/: integration_test.rs
runtime/rune-proto/: Cargo.toml  build.rs
runtime/rune-proto/proto/rune/wire/v1/: rune.proto
runtime/rune-proto/src/: lib.rs
runtime/rune-schema/: Cargo.toml
runtime/rune-schema/src/: lib.rs  openapi.rs  validator.rs
runtime/rune-schema/tests/: openapi_test.rs  validator_test.rs
runtime/rune-server/: Cargo.toml
runtime/rune-server/src/: main.rs
runtime/rune-server/tests/: e2e_test.rs  protocol_guarantees_test.rs
runtime/rune-store/: Cargo.toml
runtime/rune-store/src/: flows.rs  key_cache.rs  keys.rs  lib.rs  logs.rs  models.rs  pool.rs  snapshots.rs  store.rs  tasks.rs  verifier.rs
runtime/rune-store/tests/: store_test.rs
scripts/: sync-proto.sh
sdks/: test-matrix.md
sdks/go/: README.md
sdks/python/: .gitignore  README.md  gen_proto.sh  pyproject.toml
sdks/python/src/rune/: __init__.py  caster.py  pilot_client.py  types.py
sdks/python/src/rune/_proto/rune/wire/v1/: rune_pb2.py  rune_pb2_grpc.py
sdks/python/src/rune_sdk/: __init__.py  caster.py  handler.py  stream.py  types.py
sdks/python/src/rune_sdk/_proto/: __init__.py
sdks/python/src/rune_sdk/_proto/rune/wire/v1/: rune_pb2.py
sdks/python/tests/: test_caster.py  test_e2e.py  test_types.py  test_unit.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: caster.rs  config.rs  context.rs  error.rs  handler.rs  lib.rs  pilot_client.rs  stream.rs
sdks/rust/tests/: e2e_test.rs  unit_test.rs
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/proto/: rune.proto
sdks/typescript/src/: caster.ts  handler.ts  index.ts  pilot-client.ts  stream.ts  types.ts
sdks/typescript/tests/: caster.test.ts  e2e.test.ts  stream.test.ts  types.test.ts  unit.test.ts
tests/: README.md
(+17 files in other folders)
