[package]
name = "rust-caster-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-caster-example"
path = "main.rs"

[dependencies]
rune-sdk = { path = "../../sdks/rust" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
