[package]
name = "rune-cli"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "6"
libc = "0.2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
