[package]
name = "rune-cli"
version = "1.2.0"
edition = "2021"

[lib]
name = "rune_cli"
path = "src/lib.rs"

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "6"
libc = "0.2"
urlencoding = "2"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
rune-proto = { path = "../rune-proto" }
tonic = { workspace = true, features = ["transport"] }
tokio-stream = { workspace = true }
rune-store = { path = "../rune-store" }
fs2 = "0.4"

[[test]]
name = "cli_parse_test"
path = "tests/unit/cli_parse_test.rs"

[dev-dependencies]
tempfile = "3"
