[package]
name = "rune-core"
version = "0.2.0"
edition = "2021"

[dependencies]
rune-proto = { path = "../rune-proto" }
tokio.workspace = true
tonic.workspace = true
bytes.workspace = true
dashmap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
