[package]
name = "rune-core"
version = "1.2.0"
edition = "2021"

[dependencies]
rune-proto = { path = "../rune-proto" }
tokio.workspace = true
tonic.workspace = true
bytes.workspace = true
dashmap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
rand = "0.9"
parking_lot = "0.12"

[dev-dependencies]
tempfile.workspace = true
