[package]
name = "rune-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
rune-core = { path = "../rune-core" }
rune-proto = { path = "../rune-proto" }
serde_urlencoded = "0.7"
axum.workspace = true
tokio.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
