[package]
name = "rune-gate"
version = "0.2.0"
edition = "2021"

[dependencies]
rune-core = { path = "../rune-core" }
rune-flow = { path = "../rune-flow" }
rune-proto = { path = "../rune-proto" }
rune-schema = { path = "../rune-schema" }
rune-store = { path = "../rune-store" }
serde_urlencoded = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
axum.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }
dashmap.workspace = true
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
