[package]
name = "rune-proto"
version = "1.2.0"
edition = "2021"
description = "Protocol Buffer generated code for Rune Wire Protocol"
license = "MIT"
repository = "https://github.com/chasey-myagi/rune"
include = ["src/**/*", "build.rs", "proto/**/*", "Cargo.toml"]

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
