[package]
name = "rune-server"
version = "0.2.0"
edition = "2021"

[dependencies]
rune-core = { path = "../rune-core" }
rune-flow = { path = "../rune-flow" }
rune-gate = { path = "../rune-gate" }
rune-proto = { path = "../rune-proto" }
rune-store = { path = "../rune-store" }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["tls"] }
bytes.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
rand = "0.9"
hex = "0.4"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full", "test-util"] }
rune-schema = { path = "../rune-schema" }
async-trait = { workspace = true }
serde_json = { workspace = true }
