[package]
name = "rune-store"
version = "0.2.0"
edition = "2021"

[dependencies]
rune-core = { path = "../rune-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
