[package]
name = "rune-store"
version = "1.0.0"
edition = "2021"

[features]
test-helpers = []

[dependencies]
rune-core = { path = "../rune-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
hex = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
rune-store = { path = ".", features = ["test-helpers"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
