[package]
name = "rune-framework"
version = "1.3.0"
edition = "2021"
description = "Official Rust SDK for Rune distributed function execution framework"
license = "MIT"
repository = "https://github.com/chasey-myagi/rune"

[dependencies]
rune-proto = { version = "1.2.0", path = "../../runtime/rune-proto" }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
http = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rune-proto = { version = "1.2.0", path = "../../runtime/rune-proto" }
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = "0.1"
