[package]
name = "rune-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rune-core = { path = "../rune-core" }
rune-gate = { path = "../rune-gate" }
rune-proto = { path = "../rune-proto" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
bytes = "1"
anyhow = "1"
axum = "0.7"
dashmap = "6"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
